[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/StaticAssets/Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/StaticAssets/Animations/Hit.anim" type="Animation" id=3]
[ext_resource path="res://Assets/StaticAssets/Sounds/shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/StaticAssets/Sounds/explosion.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.9287, 3.0198 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = ExtResource( 3 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
